--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   "author": "ver",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.2",
     "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.4.0",
     "mysql": "^2.16.0"
   }
 }
