--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.4.0",
-    "mysql": "^2.16.0"
+    "mysql": "^2.16.0",
+    "socket.io": "^2.1.1"
   }
 }
