--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "formidable": "^1.2.1",
     "jsonwebtoken": "^8.4.0",
     "mysql": "^2.16.0",
-    "socket.io": "^2.1.1"
+    "socket.io": "^2.1.1",
+    "uniqid": "^5.0.3"
   }
 }
