--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jimp": "^0.6.0",
     "jsonwebtoken": "^8.4.0",
     "mysql": "^2.16.0",
+    "pem": "^1.13.2",
     "socket.io": "^2.1.1",
     "uniqid": "^5.0.3"
   }
